# ARIS_for_Robotics

./: AGENT_GUIDE.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  README.md  README_CN.md  SKILLS_GUIDE.md
benchmarks/research_workflow/: tasks.json
docs/: CODEX_CLAUDE_REVIEW_GUIDE.md  CODEX_CLAUDE_REVIEW_GUIDE_CN.md  CODEX_MAINLINE_PARITY_RULES_CN.md  INERTIAL_ODOMETRY_GUIDE_CN.md  PROJECT_ARCHITECTURE_GUIDE_CN.md  SESSION_RECOVERY_GUIDE.md  SESSION_RECOVERY_GUIDE_CN.md
fixtures/cpp_algorithm_project/: CMakeLists.txt  CODEX.md
fixtures/cpp_algorithm_project/benchmarks/: vector_stats_benchmark.cpp
fixtures/cpp_algorithm_project/include/: vector_stats.h
fixtures/cpp_algorithm_project/src/: vector_stats.cpp
fixtures/cpp_algorithm_project/tests/: vector_stats_test.cpp
fixtures/cuda_mixed_project/: CMakeLists.txt  CODEX.md
fixtures/cuda_mixed_project/benchmarks/: cuda_mixed_benchmark.cu
fixtures/cuda_mixed_project/include/: vector_add_cuda.h
fixtures/cuda_mixed_project/src/: vector_add_cuda.cu
fixtures/cuda_mixed_project/tests/: vector_add_cuda_test.cpp
fixtures/robotics_slam_project/: CMakeLists.txt  CODEX.md
fixtures/robotics_slam_project/apps/: slam_offline_eval.cpp
fixtures/robotics_slam_project/include/: slam_metrics.h
fixtures/robotics_slam_project/src/: slam_metrics.cpp
fixtures/robotics_slam_project/tests/: slam_metrics_test.cpp
fixtures/robotics_slam_ros2_project/: CODEX.md
fixtures/robotics_slam_ros2_project/src/slam_ros2_fixture/: CMakeLists.txt  package.xml
fixtures/robotics_slam_ros2_project/src/slam_ros2_fixture/apps/: slam_ros2_offline_eval.cpp
fixtures/robotics_slam_ros2_project/src/slam_ros2_fixture/src/: slam_metrics.cpp
fixtures/robotics_slam_ros2_project/src/slam_ros2_fixture/tests/: slam_metrics_test.cpp
mcp-servers/claude-review/: README.md  server.py
mcp-servers/gemini-review/: server.py
scripts/: check_claude_review_runtime.sh  check_gemini_review_runtime.sh  check_unattended_mainline.sh  eval_research_workflow.sh  host_test_gemini_review.sh  install_codex_claude_mainline.sh  run_unattended_mainline.sh  smoke_test_codex_claude_mainline.sh  uninstall_codex_claude_mainline.sh
skills/ablation-planner/: SKILL.md
skills/alphaxiv/: SKILL.md
skills/arxiv/: SKILL.md
skills/auto-paper-improvement-loop/: SKILL.md
skills/auto-review-loop/: SKILL.md
skills/auto-review-loop-minimax/: SKILL.md
skills/citation-audit/: SKILL.md
skills/complexity-claim-audit/: SKILL.md
skills/cpp-bench/: SKILL.md
skills/cpp-build/: SKILL.md
skills/cpp-profile/: SKILL.md
skills/cpp-sanitize/: SKILL.md
skills/cuda-build/: SKILL.md
skills/cuda-correctness-audit/: SKILL.md
skills/cuda-profile/: SKILL.md
skills/cuda-sanitize/: SKILL.md
skills/deep-innovation-loop/: SKILL.md
skills/deepxiv/: SKILL.md
skills/exa-search/: SKILL.md
skills/experiment-audit/: SKILL.md
skills/experiment-bridge/: SKILL.md
skills/experiment-plan/: SKILL.md
skills/grant-proposal/: SKILL.md
skills/idea-creator/: SKILL.md
skills/idea-discovery/: SKILL.md
skills/idea-discovery-robot/: SKILL.md
skills/meta-optimize/: SKILL.md
skills/novelty-check/: SKILL.md
skills/paper-claim-audit/: SKILL.md
skills/paper-compile/: SKILL.md
skills/paper-figure/: SKILL.md
skills/paper-illustration/: SKILL.md
skills/paper-plan/: SKILL.md
templates/: CODEX_TEMPLATE.md  README.md
tests/: ci.sh  run_all.sh  smoke_claude_md_contract.sh  smoke_complexity_audit.sh  smoke_container_run.sh  smoke_cpp_build.sh  smoke_cpp_sanitize.sh  smoke_failure_seeds.sh  smoke_install_aris.sh  smoke_paper_writing_dispatch.sh  smoke_project_contract.sh  smoke_research_wiki.sh  smoke_shared_refs.sh  smoke_skill_frontmatter.sh  smoke_uninstall_aris.sh  smoke_verify_paper_audits.sh  smoke_verify_wiki_coverage.sh
tools/: arxiv_fetch.py  autonomy_lib.py  autonomy_supervisor.py  check_codex_mainline_parity.py  container_run.sh  generate_codex_claude_review_overrides.py  generate_codex_gemini_review_overrides.py  install_aris.ps1  install_aris.sh  project_contract.py  research_wiki.py  research_workflow_eval.py  save_trace.sh  seed_cpp_ros2_cuda_failure_patterns.sh  semantic_scholar_fetch.py  smart_update.ps1  smart_update.sh  uninstall_aris.sh  update_autonomy_state.py  verify_cpp_project.sh  verify_cuda_project.sh  verify_paper_audits.sh  verify_ros2_project.sh
(+154 files in other folders)
