<?xml version="1.0"?>
<package format="3">
  <name>slam_ros2_fixture</name>
  <version>0.0.1</version>
  <description>Minimal ROS2 offline SLAM fixture for ARIS smoke tests.</description>
  <maintainer email="noreply@example.com">ARIS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
